# Ash

./: .gitignore  Cargo.toml  LICENSE  MANUAL.md  Makefile  README.md  build.rs  go.mod  go.sum  hostagent.go  test_hostagent.py
.claude/skills/ash/: SKILL.md  tools-reference.md
.github/workflows/: release.yml
client/: client.py  demo.py
docker/: manager.go  parser.go
docs/: kata-containers.md
example/: deprovision_sandbox.py  mcp_example.py  spawn_sandbox.py
k8s/: Dockerfile  Dockerfile.cp  Dockerfile.gateway  client.py  deploy.sh  infra.yaml  proxy-mcp.py  rbac.yaml  requirements.txt  stateless-mcps.yaml
k8s-config/: Makefile  deploy.sh  infra-local.yaml  infra.yaml  kata-runtimeclass.yaml  rbac.yaml  stateless-mcps.yaml
k8s-scaffold/: Makefile
k8s-scaffold/control-plane/: Dockerfile  go.mod  go.sum  main.go
k8s-scaffold/gateway/: Dockerfile  go.mod  main.go
k8s/control-plane/: main.go
k8s/docker/: Dockerfile.ddgs-mcp  Dockerfile.fetch-mcp  Dockerfile.general  Dockerfile.proxy-mcp  Dockerfile.sandbox-fusion  build.sh  fetch-mcp.py  general-mcp.py  proxy-mcp.py  sandbox-fusion-mcp.py
k8s/gateway/: main.go
k8s/infra/: rbac.yaml
mcp/: clients.py
model/: model.go
sandbox-recipe/: Makefile
sandbox-recipe/general/: Dockerfile  main.py
sandbox-recipe/general/ddgs_mcp/: main.py  pyproject.toml
src/: cli.rs  daemon.rs  gateway.rs  lib.rs  main.rs  mcp.rs  style.rs
src/backend/: docker.rs  k8s.rs  local.rs  mod.rs
src/tools/: buffer.rs  clip.rs  edit.rs  events.rs  filesystem.rs  git.rs  grep.rs  mcp_mount.rs  mod.rs  outline.rs  session.rs  shell.rs  terminal.rs  utils.rs  view.rs
swebench/: README.md  __init__.py  agent.py  docker_env.py  runner.py
tests/: tools_test.rs
utils/: utils.go
