[package]
name = "ash"
version = "0.1.0"
edition = "2021"
description = "Code Agent CLI & MCP Server - shared tools, dual targets"
license = "MIT"

[lib]
name = "ash"
path = "src/lib.rs"

[[bin]]
name = "ash"
path = "src/bin/ash.rs"

[[bin]]
name = "ash-mcp"
path = "src/bin/ash-mcp.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
