[package]
name = "ash"
version = "0.1.0"
edition = "2021"
description = "Code Agent CLI & MCP Server - shared tools, dual targets"
license = "MIT"

[lib]
name = "ash"
path = "src/lib.rs"

[[bin]]
name = "ash"
path = "src/bin/ash.rs"

[[bin]]
name = "ash-mcp"
path = "src/bin/ash-mcp.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures-util = "0.3"
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Tree-sitter for code outline
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.23"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
